log/build_2024-02-15_00-11-53/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py", line 5
    from std_msgs.msgimport String
                            ^^^^^^
SyntaxError: invalid syntax

